NEBULA-25206 - Alignment Problem in Manage ProfileFix bug 24923: call SetThreadCultures function to set the culture correctly.
git-svn-id: https://dotnetnuke.svn.codeplex.com/svn@71172 142e9c35-602f-4880-9f37-ec48a24daa6a

--- a/Trunk/Content/website/DesktopModules/Admin/Security/module.css
+++ b/Trunk/Content/website/DesktopModules/Admin/Security/module.css
@@ -162,6 +162,10 @@ p.dnnFormRequired span
     margin-bottom: 20px;
 }
 
+.dnnProfileDetails .dnnFormItem  > .dnnLeft{
+	width:325px;
+}
+
 
 .dnnProfileDetails .dnnFormItem .dnnLeft select{
     display: block;
