--- a/Trunk/Content/website/Portals/_default/default.css
+++ b/Trunk/Content/website/Portals/_default/default.css
@@ -1393,6 +1393,8 @@
         color: #333;
         cursor: pointer;
         vertical-align: middle;
+        list-style: none;
+        margin: 0;
     }
     
     .dnnButtonDropdown-ul > li:last-child{
